# mittelo

./: .gitignore  ANTIGRAVITY_ACK.md  CHANGELOG.md  CONTRIBUTING.md  COORDINATION_PLAN.md  DEVELOPING_mittelo_human_loop.md  GEMINI_CLOUD_PLAN.md  GEMINI_MLX_PLAN.md  GEMINI_PLAN.md  GEMINI_SESSION_0001.md  HUMAN_DOCS.md  README.md  TODO.md  WHAT_IS_MITTELO.md  codex_notes_00001.md  codex_notes_00004.md  gemini_cli_notes_00001.md  logbook_00001.md  pyproject.toml
assets/: logo.ansi  logo_small.ansi
backends/: README.md
docs/: BACKENDS.md  CODEBASE_AUDIT.md  COVERAGE.md  DEAD_CODE.md  DEVELOPING_MITTELO_OUTSIDE_SWARM.md  FEATURES.md  GAIA_REMIX.md  MLX_GUIDE.md  PROTOCOL.md  QA_TICKETS.md  QUICKSTART.md  REMIX.md  REST_API.md  SHARE_THIS.md  STRUCTURE.md  TESTING.md  TROUBLESHOOTING.md  USE_CASES.md  VERSION_LOCK.md  WORKSPLIT.md
examples/: README.md  hello.jsonl  mini_stress.jsonl  stress_test.jsonl
go/: README.md  go.mod
info/: AGENT_PROMPTS.md  CODEX_BRIEF.md  CODEX_PLAN.md  FEATURE_BUNDLES.md  GO_PORT.md  HLD_finnish.md  NOHUMAN_LOOP.md  QUICKSTART.md  TO_ANTIGRAVITY.md  codex_takes_lead.md  doing_mittelo_now.md  handover_now.md  kiro_cli_notes_00001.md  logbook_00001.md
mittelo/: __main__.py  agent.py  backends.py  hub.py  storage.py
reports/: claude_development_plan.md  dev_pack_run_001.md  full_swarm_run.md
scripts/: dev_monitor.py  doctor.py  gen_stress_test.py  img2ansi.py  mission_control.sh  run_backend_matrix.py  run_pair_smoke.py  run_system_tests.py  smoke_test.py  verify_cli_drivers.py  verify_new_structure.py  verify_tmux_backend.py
(+64 files in other folders)
