[project]
name = "mittelo"
version = "0.1.0"
description = "Mittelö SwarmKit: hub + agents + pluggable backends (codex/gemini/kiro/local LLMs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.0",
]

[project.scripts]
mittelo = "mittelo.__main__:main"
